test: 에러 수정 시도3