@@ -3,7 +3,6 @@ package com.yat2.episode.mindmap.s3;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
 import com.yat2.episode.global.exception.CustomException;
 import com.yat2.episode.global.exception.ErrorCode;
 import com.yat2.episode.mindmap.s3.dto.S3UploadFieldsDto;
@@ -13,8 +12,6 @@ import org.springframework.stereotype.Component;
 import software.amazon.awssdk.auth.credentials.AwsCredentials;
 import software.amazon.awssdk.auth.credentials.AwsSessionCredentials;
 
-import javax.crypto.Mac;
-import javax.crypto.spec.SecretKeySpec;
 import java.nio.charset.StandardCharsets;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -26,10 +23,8 @@ import java.util.*;
 @RequiredArgsConstructor
 public class S3PostSigner {
     private static final String HMAC_ALGORITHM = "HmacSHA256";
-
     private static final ObjectMapper compactMapper = new ObjectMapper()
-            .setSerializationInclusion(JsonInclude.Include.NON_NULL)
-            .configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false);
+            .setSerializationInclusion(JsonInclude.Include.NON_NULL);
 
     private final S3Properties s3Properties;
 
@@ -42,10 +37,8 @@ public class S3PostSigner {
                               ? ((AwsSessionCredentials) credentials).sessionToken() : null;
 
         ZonedDateTime now = ZonedDateTime.now(ZoneId.of("UTC")).truncatedTo(ChronoUnit.SECONDS);
-
         String dateStamp = now.format(DateTimeFormatter.ofPattern("yyyyMMdd"));
         String xAmzDate = now.format(DateTimeFormatter.ofPattern("yyyyMMdd'T'HHmmss'Z'"));
-
         String expiration = now.plusMinutes(15).format(DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss'Z'"));
 
         String credential = accessKey + "/" + dateStamp + "/" + region + "/s3/aws4_request";
@@ -53,50 +46,47 @@ public class S3PostSigner {
         String policyJson = createPolicyJson(bucket, key, credential, xAmzDate, sessionToken, expiration);
 
         String policyBase64 = Base64.getEncoder().encodeToString(policyJson.getBytes(StandardCharsets.UTF_8));
-
         String signature = calculateSignature(policyBase64, secretKey, dateStamp, region);
 
         String actionUrl = (endpoint != null && !endpoint.isEmpty()) ? endpoint + "/" + bucket :
                            "https://" + bucket + ".s3." + region + ".amazonaws.com";
 
-        S3UploadFieldsDto fields = new S3UploadFieldsDto(
-                key,
-                "AWS4-HMAC-SHA256",
-                credential,
-                xAmzDate,
-                sessionToken,
-                policyBase64,
-                signature
-        );
-
-        return new S3UploadResponseDto(actionUrl, fields);
+        return new S3UploadResponseDto(actionUrl, new S3UploadFieldsDto(
+                key, "AWS4-HMAC-SHA256", credential, xAmzDate, sessionToken, policyBase64, signature
+        ));
     }
 
-    private String createPolicyJson(String bucket, String key, String credential, String xAmzDate, String sessionToken,
-                                    String expiration) {
+    private String createPolicyJson(String bucket, String key, String credential, String xAmzDate,
+                                    String sessionToken, String expiration) {
         try {
             Map<String, Object> policy = new LinkedHashMap<>();
             policy.put("expiration", expiration);
 
             List<Object> conditions = new ArrayList<>();
-            conditions.add(Map.of("bucket", bucket));
-            conditions.add(Map.of("key", key));
-            conditions.add(Map.of("x-amz-algorithm", "AWS4-HMAC-SHA256"));
-            conditions.add(Map.of("x-amz-credential", credential));
-            conditions.add(Map.of("x-amz-date", xAmzDate));
+
+            conditions.add(createEntry("bucket", bucket));
+            conditions.add(createEntry("key", key));
+            conditions.add(createEntry("x-amz-algorithm", "AWS4-HMAC-SHA256"));
+            conditions.add(createEntry("x-amz-credential", credential));
+            conditions.add(createEntry("x-amz-date", xAmzDate));
 
             if (sessionToken != null && !sessionToken.isEmpty()) {
-                conditions.add(Map.of("x-amz-security-token", sessionToken));
+                conditions.add(createEntry("x-amz-security-token", sessionToken));
             }
 
-            conditions.add(List.of("content-length-range", 0, s3Properties.getMaxUploadSize()));
+            conditions.add(Arrays.asList("content-length-range", 0, s3Properties.getMaxUploadSize()));
 
             policy.put("conditions", conditions);
-
             return compactMapper.writeValueAsString(policy);
         } catch (JsonProcessingException e) {
             throw new CustomException(ErrorCode.S3_URL_FAIL);
         }
+    }
+
+    private Map<String, String> createEntry(String k, String v) {
+        Map<String, String> map = new HashMap<>();
+        map.put(k, v);
+        return map;
     }
 
     private String calculateSignature(String stringToSign, String secret, String dateStamp, String region) {
@@ -113,8 +103,8 @@ public class S3PostSigner {
     }
 
     private byte[] hmac(byte[] key, String data) throws Exception {
-        Mac mac = Mac.getInstance(HMAC_ALGORITHM);
-        mac.init(new SecretKeySpec(key, HMAC_ALGORITHM));
+        javax.crypto.Mac mac = javax.crypto.Mac.getInstance(HMAC_ALGORITHM);
+        mac.init(new javax.crypto.spec.SecretKeySpec(key, HMAC_ALGORITHM));
         return mac.doFinal(data.getBytes(StandardCharsets.UTF_8));
     }
 
